lib/aten/atg_shim.h

/* Hand-written C ABI shim over the ATen "core" C++ subset: the *Tensor API*
 * (handle lifecycle + introspection + the C++ conversion helpers). The ATen
 * *operations* (at::add, at::reshape, ...) live in atg_ops.h / atg_ops.cpp,
 * which is the half intended to eventually be autogenerated from the schema.
 *
 * ctypes binds C, but ATen/c10 are C++ (mangled symbols, non-POD by-value
 * types). Every function here is `extern "C"` and trades only in C scalars /
 * opaque pointers so it is callable from OCaml ctypes. Kept deliberately small
 * and grown one operation at a time. */
#ifndef ATG_SHIM_H_
#define ATG_SHIM_H_

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

/* Opaque owning handle to a heap-allocated at::Tensor.  Caller must atc_free
   it.  The underlying type is never exposed to C callers. */
struct atc_tensor_opaque;
typedef struct atc_tensor_opaque* atc_tensor;

/* Opaque owning handle to a heap-allocated std::vector<at::Tensor>: the result
   of an op returning Tensor[] (at::unbind, ...). Caller must
   atc_tensor_list_free it.

   Container ownership and storage aliasing are SEPARATE. atc_tensor_list_get
   hands out an independently freeable atc_tensor that still shares ATen storage
   and view metadata with the op's input, and at::Tensor is intrusive-
   reference-counted, so destroying the container drops only its own handles --
   tensors already extracted stay valid. Unlike atc_to_tensor_vector below
   (input-only, borrowed), this one owns what it points at. */
struct atc_tensor_list_opaque;
typedef struct atc_tensor_list_opaque* atc_tensor_list;

/* Data type: integer codes matching c10::ScalarType. */
typedef int8_t atc_scalar_type;
#define ATC_DTYPE_BYTE   ((atc_scalar_type)0)
#define ATC_DTYPE_CHAR   ((atc_scalar_type)1)
#define ATC_DTYPE_SHORT  ((atc_scalar_type)2)
#define ATC_DTYPE_INT    ((atc_scalar_type)3)
#define ATC_DTYPE_LONG   ((atc_scalar_type)4)
#define ATC_DTYPE_HALF   ((atc_scalar_type)5)
#define ATC_DTYPE_FLOAT  ((atc_scalar_type)6)
#define ATC_DTYPE_DOUBLE ((atc_scalar_type)7)
#define ATC_DTYPE_BOOL   ((atc_scalar_type)11)

/* Which arm of the c10::Scalar union is live. NONE encodes an absent optional
   Scalar arg. Codes mirror Aten.Scalar.Tag. */
enum atc_scalar_tag {
  ATC_SCALAR_INT   = 0,
  ATC_SCALAR_FLOAT = 1,
  ATC_SCALAR_BOOL  = 2,
  ATC_SCALAR_NONE  = 3,
};

/* c10::Scalar's payload: the arms share storage since a scalar is exactly one
   of them. Only the arm named by the tag is valid. */
union atc_scalar_value {
  int64_t i;
  double  d;
  bool    b;
};

/* c10::Scalar marshalled as a tagged POD (mirrors Aten.Scalar). Passed across
   the ctypes boundary by pointer. */
struct atc_scalar {
  enum atc_scalar_tag    tag;
  union atc_scalar_value v;
};

/* c10::Device marshalled as a POD, passed across the ctypes boundary by pointer
   (mirrors Aten.Device). [type] is a c10::DeviceType code, or negative for an
   absent Device?; [index] is the c10::DeviceIndex (-1 = unspecified). */
struct atc_device {
  int8_t type;
  int8_t index;
};

/* Results of a multi-output op: a tuple of N tensor handles, filled through an
   out-param while the op itself returns a 0 (ok) / -1 (error) status. Passed by
   pointer (cstubs cannot pass/return a struct by value). */
struct atc_tensors2 {
  atc_tensor v0;
  atc_tensor v1;
};
struct atc_tensors3 {
  atc_tensor v0;
  atc_tensor v1;
  atc_tensor v2;
};

#ifdef __cplusplus
extern "C" {
#endif

/* The process-wide default dtype, as a c10::ScalarType enum value. */
int8_t atc_default_dtype(void);

/* Size in bytes of one element of the given c10::ScalarType. */
size_t atc_dtype_elem_size(int8_t scalar_type);

/* New uninitialized contiguous CPU tensor of the given shape and dtype. */
atc_tensor atc_new(const int64_t* sizes, size_t ndim, atc_scalar_type dtype);

/* New CPU tensor that owns a copy of [data] laid out by [sizes]/[strides] (in
   elements) starting at [storage_offset]. This is PyTorch's native (storage,
   sizes, strides, offset) representation: the layout may be non-contiguous
   (e.g. channels-last). [data] is copied (the result does not alias it), so the
   caller may free [data] immediately after. */
atc_tensor atc_from_blob(const void* data, const int64_t* sizes,
                         const int64_t* strides, size_t ndim,
                         int64_t storage_offset, atc_scalar_type dtype);

/* Release a handle returned by atc_new / atc_add / atc_mul. */
void atc_free(atc_tensor t);

/* Number of elements. */
int64_t atc_numel(atc_tensor t);

/* Number of dimensions (rank). */
size_t atc_dim(atc_tensor t);

/* Write the tensor's shape (its [atc_dim] sizes) into [out]; the caller sizes
   the buffer using [atc_dim]. */
void atc_sizes(atc_tensor t, int64_t* out);

/* Write the tensor's strides (in elements) into [out], sized via [atc_dim]. */
void atc_strides(atc_tensor t, int64_t* out);

/* The tensor's dtype as a c10::ScalarType code. */
atc_scalar_type atc_dtype(atc_tensor t);

/* Size in bytes of one element of the tensor's dtype. */
int64_t atc_element_size(atc_tensor t);

/* 1 if the tensor is contiguous / defined / on CPU, else 0. */
int atc_is_contiguous(atc_tensor t);
int atc_defined(atc_tensor t);
int atc_is_cpu(atc_tensor t);

/* Raw data pointer, checking that the tensor's dtype matches.
   Returns NULL on mismatch; the caller casts to the appropriate element type. */
void* atc_data_ptr(atc_tensor t, atc_scalar_type dtype);

/* Extract the single element of a one-element tensor, converting to the target
   type. Writes *out and returns 1; on failure (e.g. numel != 1) returns 0 and
   sets atc_last_error. */
int atc_item_double(atc_tensor t, double* out);
int atc_item_int64(atc_tensor t, int64_t* out);

/* Message of the last shim error on this thread, or NULL if none. ATen throws
   c10::Error, which cannot cross extern "C"; throwing entry points (e.g.
   atc_new) catch it, stash the message here, and return a sentinel. Valid only
   until the next shim call on the same thread. */
const char* atc_last_error(void);

/* Human-readable rendering via ATen's tensor printer. Valid until the next shim
   call on this thread; NULL (with atc_last_error set) on error. */
const char* atc_to_string(atc_tensor t);

/* Elementwise closeness / exact equality (ATen at::allclose / at::equal).
   Return 1 (true) or 0 (false), or -1 with atc_last_error set on error. */
int atc_allclose(atc_tensor a, atc_tensor b, double rtol, double atol,
                 int equal_nan);
int atc_equal(atc_tensor a, atc_tensor b);

/* Number of live tensor handles: atc_wrap allocations not yet atc_free'd.
   atc_wrap is the single allocation point (atc_new and every op wrapper go
   through it), so this is an exact live count — used by the OCaml RAII layer's
   leak / GC round-trip tests. */
int64_t atc_live_count(void);

/* --- Tensor[] results (atc_tensor_list) --------------------------------- */

/* Number of tensors in the list; -1 with atc_last_error set if [l] is NULL.
   A null handle cannot be caught by ATC_TRY (dereferencing it is UB, not a C++
   exception), so these entry points check before touching the pointer. */
int64_t atc_tensor_list_len(atc_tensor_list l);

/* Element [i] as a NEW owning atc_tensor handle sharing the element's storage
   and view metadata; the caller must atc_free it. NULL with atc_last_error set
   if [l] is NULL or [i] is out of range. */
atc_tensor atc_tensor_list_get(atc_tensor_list l, int64_t i);

/* Release the list container (not the tensors extracted from it). NULL is a
   no-op, mirroring atc_free. */
void atc_tensor_list_free(atc_tensor_list l);

/* Number of live list containers: atc_wrap_tensor_list allocations not yet
   freed. The tensor [atc_live_count] does not cover these -- a container is not
   a tensor handle -- so the leak tests need their own counter. */
int64_t atc_tensor_list_live_count(void);

#ifdef __cplusplus
}

/* C++ conversion helpers for use inside atg_shim.cpp and generated wrappers. */
#include <atomic>
#include <optional>
#include <vector>

#include <ATen/core/Tensor.h>
#include <c10/core/Device.h>
#include <c10/core/Scalar.h>

/* Build a c10::Scalar from the tagged POD, picking the constructor that
   preserves the integral / floating / bool category (so ATen type promotion
   stays correct). Used by the generated atg_ops.cpp wrappers. */
inline c10::Scalar atc_to_c10_scalar(const struct atc_scalar* s) {
  switch (s->tag) {
    case ATC_SCALAR_INT:   return c10::Scalar(s->v.i);
    case ATC_SCALAR_FLOAT: return c10::Scalar(s->v.d);
    case ATC_SCALAR_BOOL:  return c10::Scalar(s->v.b);
    default:               return c10::Scalar(s->v.d);  /* unreachable when present */
  }
}
inline std::optional<c10::Scalar> atc_to_c10_scalar_opt(const struct atc_scalar* s) {
  if (s->tag == ATC_SCALAR_NONE) return std::nullopt;
  return atc_to_c10_scalar(s);
}

/* Build a c10::Device from the POD (type/index). Used by the generated wrappers
   for a Device arg; the optional form returns nullopt when type is negative. */
inline c10::Device atc_to_device(const struct atc_device* d) {
  return c10::Device(static_cast<c10::DeviceType>(d->type),
                     static_cast<c10::DeviceIndex>(d->index));
}
inline std::optional<c10::Device> atc_to_device_opt(const struct atc_device* d) {
  if (d->type < 0) return std::nullopt;
  return atc_to_device(d);
}

namespace atc_detail {
/* Live atc_tensor handles; bumped in atc_wrap, dropped in atc_free. Defined in
   atg_shim.cpp. Atomic so the count stays correct no matter which thread a
   handle is freed on (e.g. a GC finaliser). */
extern std::atomic<long> live;

/* Live atc_tensor_list containers; bumped in atc_wrap_tensor_list, dropped in
   atc_tensor_list_free. Declared here (not only defined in atg_shim.cpp)
   because the inline wrapper below increments it. */
extern std::atomic<long> list_live;

/* Stash a message for atc_last_error (thread-local; see atg_shim.cpp). */
void set_error(const char* msg);
}  // namespace atc_detail

/* Run a shim body, converting any C++ exception into an atc_last_error message
   and returning [sentinel] (c10::Error cannot cross extern "C"). */
#define ATC_TRY(sentinel, ...)                 \
  try {                                        \
    __VA_ARGS__                                \
  } catch (const std::exception& e) {          \
    ::atc_detail::set_error(e.what());         \
    return sentinel;                           \
  }

inline at::Tensor* atc_to_ptr(atc_tensor t) {
  return reinterpret_cast<at::Tensor*>(t);
}
/* Build a std::vector<at::Tensor> from an array of handles, for ops taking a
   Tensor[] (at::TensorList = ArrayRef<Tensor>). The vector is a temporary in
   the generated wrapper's at::<op>(...) call; its lifetime extends to the end
   of that full expression, and the ArrayRef borrows it without copying. */
inline std::vector<at::Tensor> atc_to_tensor_vector(const atc_tensor* data,
                                                    int len) {
  std::vector<at::Tensor> v;
  v.reserve(len);
  for (int i = 0; i < len; ++i) v.push_back(*atc_to_ptr(data[i]));
  return v;
}
inline atc_tensor atc_from_ptr(at::Tensor* t) {
  return reinterpret_cast<atc_tensor>(t);
}
inline atc_tensor atc_wrap(at::Tensor t) {
  ++atc_detail::live;
  return atc_from_ptr(new at::Tensor(std::move(t)));
}

inline std::vector<at::Tensor>* atc_tensor_list_to_ptr(atc_tensor_list l) {
  return reinterpret_cast<std::vector<at::Tensor>*>(l);
}
/* Take ownership of an op's returned vector. Allocates BEFORE bumping the
   counter: a throwing allocation must not leave the count claiming a container
   that was never created. (atc_wrap above increments first; that ordering is
   not worth copying.) */
inline atc_tensor_list atc_wrap_tensor_list(std::vector<at::Tensor> v) {
  auto* p = new std::vector<at::Tensor>(std::move(v));
  ++atc_detail::list_live;
  return reinterpret_cast<atc_tensor_list>(p);
}
#endif

#endif /* ATG_SHIM_H_ */