lib/aten/aten_function_description.ml

open Ctypes

(* The Tensor API: the stable, hand-written half of the binding (handle
   lifecycle + introspection). The ATen *operations* live in
   aten_operation_description.ml — the half meant to be autogenerated. The shared
   handle type [atc_tensor] is defined here and reused there.

   atc_tensor is `struct atc_tensor_opaque*` in shim.h — a pointer to the
   (never-sealed) opaque struct declared in Aten_type_description.Types, so the
   multi-output result structs there can type their fields as atc_tensor too. *)
let atc_tensor = ptr Aten_types_generated.tensor_opaque

(* The owned Tensor[] result container, returned by the generated wrappers for
   ops whose schema return is [Tensor[]] (see Aten_gen). Opaque, like
   atc_tensor; consumed through Aten_tensor_list. *)
let atc_tensor_list = ptr Aten_types_generated.tensor_list_opaque

(* c10::ScalarType crosses the boundary as its int8 code; [scalar_type] is a
   ctypes view giving the OCaml side the typed [Aten_scalar_type.t] enum instead of a
   bare int (mirrors the enum views in aten_operation_description.ml). *)
let scalar_type =
  view int8_t
    ~read:(fun c ->
      match Aten_scalar_type.of_int c with
      | Some s -> s
      | None -> Printf.ksprintf failwith "unknown ScalarType code %d" c)
    ~write:Aten_scalar_type.to_int

module Functions (F : Ctypes.FOREIGN) = struct
  open F

  let default_dtype =
    foreign "atc_default_dtype" (void @-> returning scalar_type)

  let dtype_elem_size =
    foreign "atc_dtype_elem_size" (scalar_type @-> returning size_t)

  let new_ =
    foreign "atc_new"
      (ptr int64_t @-> size_t @-> scalar_type @-> returning atc_tensor)

  let from_blob =
    foreign "atc_from_blob"
      (ptr void @-> ptr int64_t @-> ptr int64_t @-> size_t @-> int64_t
     @-> scalar_type @-> returning atc_tensor)

  let free = foreign "atc_free" (atc_tensor @-> returning void)
  let numel = foreign "atc_numel" (atc_tensor @-> returning int64_t)
  let dim = foreign "atc_dim" (atc_tensor @-> returning size_t)
  let sizes = foreign "atc_sizes" (atc_tensor @-> ptr int64_t @-> returning void)

  let strides =
    foreign "atc_strides" (atc_tensor @-> ptr int64_t @-> returning void)

  (* named [dtype] (not [scalar_type]) to avoid shadowing the view above. *)
  let dtype = foreign "atc_dtype" (atc_tensor @-> returning scalar_type)

  let element_size =
    foreign "atc_element_size" (atc_tensor @-> returning int64_t)

  let is_contiguous = foreign "atc_is_contiguous" (atc_tensor @-> returning int)
  let defined = foreign "atc_defined" (atc_tensor @-> returning int)
  let is_cpu = foreign "atc_is_cpu" (atc_tensor @-> returning int)

  let data_ptr =
    foreign "atc_data_ptr" (atc_tensor @-> scalar_type @-> returning (ptr void))

  let item_double =
    foreign "atc_item_double" (atc_tensor @-> ptr double @-> returning int)

  let item_int64 =
    foreign "atc_item_int64" (atc_tensor @-> ptr int64_t @-> returning int)

  let live_count = foreign "atc_live_count" (void @-> returning int64_t)

  (* Tensor[] results. [tensor_list_len] returns -1 and [tensor_list_get] NULL
     on failure, both with atc_last_error set; Aten_tensor_list turns those into
     Aten_tensor.Error. *)
  let tensor_list_len =
    foreign "atc_tensor_list_len" (atc_tensor_list @-> returning int64_t)

  let tensor_list_get =
    foreign "atc_tensor_list_get"
      (atc_tensor_list @-> int64_t @-> returning atc_tensor)

  let tensor_list_free =
    foreign "atc_tensor_list_free" (atc_tensor_list @-> returning void)

  let tensor_list_live_count =
    foreign "atc_tensor_list_live_count" (void @-> returning int64_t)

  let last_error = foreign "atc_last_error" (void @-> returning string_opt)
  let to_string = foreign "atc_to_string" (atc_tensor @-> returning string_opt)

  let allclose =
    foreign "atc_allclose"
      (atc_tensor @-> atc_tensor @-> double @-> double @-> int @-> returning int)

  let equal = foreign "atc_equal" (atc_tensor @-> atc_tensor @-> returning int)
end
